# Computer_Graphic

03_Projection/: CMakeLists.txt  car.c  cubes.c  project.c  view1.c  wind_mill.c  wind_mill_babe.c
04_Shade/: CMakeLists.txt  light.c  shade.c  wind_mill.c
Geometric_Transformation_Sample_Code/: CMakeLists.txt  cubes.c  template.c  w
Hw2/: CMakeLists.txt  car.c  sample.c  template.c  wind_mill.c  wind_mill_sample.c
